test/libyul/yulSyntaxTests/invalid/invalid_octal_number.yul
{
    let x := 0100
}
// ----
// ParserError 1856: (15-16): Literal or identifier expected.
